# saveit

./: pyproject.toml  run_local.sh
app/: enums.py  home.py
app/controllers/: expense.py  fixed_expense.py  monthly_fixed_expense.py
app/db/: db.py
app/dynamo/: db.py
app/models/: expense.py  fixed_expense.py  monthly_fixed_expense.py
app/pages/: 1_create_expense.py  2_expenses_list.py  3_create_monthly_fixed_expense.py  3_monthly_fixed_expenses_list.py  4_create_monthly_fixed_expense.py
