[project]
name = "saveit"
version = "0.1.0"
description = ""
authors = [
    {name = "danny"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "paddleocr (>=2.0.1)",
    "paddlepaddle (>=3.0.0,<4.0.0)",
    "boto3 (>=1.37.37,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
